# human-friendly_pedantic-timedelta

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .ignore  .ignore.example  .readthedocs.yml  .travis.yml  AUTHORS.rst  CODE-OF-CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  history-ci.md  index.rst  installation.rst  license.rst  make.bat  pedantic-timedelta.rst  usage.rst
docs/_build/html/: .buildinfo  authors.html  code-of-conduct.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  pedantic-timedelta.html  pedantic_timedelta.html  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  pedantic_timedelta.html
docs/_build/html/_sources/: modules.rst.txt  pedantic-timedelta.rst.txt  pedantic_timedelta.rst.txt
pedantic_timedelta/: __init__.py
requirements/: dev.pip  docs.pip  release.pip  test.pip
tests/: __init__.py  test_pedantic_timedelta.py
