# This file exists within 'human-friendly_pedantic-timedelta' aka 'pedantic_timedelta':
#
#   https://github.com/hotoffthehamster/human-friendly_pedantic-timedelta
#
# Copyright © 2018-2020 Landon Bouma. All rights reserved.
#
# Permission is hereby granted,  free of charge,  to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge,  publish,  distribute, sublicense,
# and/or  sell copies  of the Software,  and to permit persons  to whom the
# Software  is  furnished  to do so,  subject  to the following conditions:
#
# The  above  copyright  notice  and  this  permission  notice  shall  be
# included  in  all  copies  or  substantial  portions  of  the  Software.
#
# THE  SOFTWARE  IS  PROVIDED  "AS IS",  WITHOUT  WARRANTY  OF ANY KIND,
# EXPRESS OR IMPLIED,  INCLUDING  BUT NOT LIMITED  TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE  FOR ANY
# CLAIM,  DAMAGES OR OTHER LIABILITY,  WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE,  ARISING FROM,  OUT OF  OR IN  CONNECTION WITH THE
# SOFTWARE   OR   THE   USE   OR   OTHER   DEALINGS  IN   THE  SOFTWARE.

# (lb): Note that using `-` or `_` in key names is interchangeable, e.g.,
#         long-description is the
# same as long_description.

[metadata]
# NOTE: Values specified in setup.py will shadow those here.
#       (Although there are very few values left in setup().)
name = human-friendly_pedantic-timedelta
author = HotOffThe Hamster
author-email = hotoffthehamster+humanfriendlypedantictimedelta@gmail.com
home-page = https://github.com/hotoffthehamster/human-friendly_pedantic-timedelta
description = Human-friendly Pedantic `timedelta`
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    # Bug Tracker = https://bugs.launchpad.net/human-friendly_pedantic-timedelta/
    Documentation = https://human-friendly_pedantic-timedelta.readthedocs.io/en/latest/
    Source Code = https://github.com/hotoffthehamster/human-friendly_pedantic-timedelta
license = MIT
license-file = LICENSE
platform = any
# https://pypi.org/classifiers/
classifier =
    OSI Approved :: MIT License
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
# Keywords for PyPI to display, and to use for search results.
keywords = timedelta elapsed time duration human friendly string formatter

[options]
zip_safe = true
# Enable setuptools_scm's use_scm_version.
setup_requires =
    setuptools
    setuptools_scm

[coverage:report]
precision = 0

[coverage:run]
branch = True
source = pedantic_timedelta

[doc8]
ignore-path = .eggs/, *.egg-info/, .tox/, docs/_build/
max-line-length = 89
# Specify encoding lest doc8 think it's 'Windows-1254' and raise UnicodeDecodeError.
file-encoding = utf-8
# DEVs: Uncomment verbose for TMI.
#  verbose=1

[flake8]
exclude = build/*.py, docs/*.py
max-line-length = 89
# See list of error codes (we can list here to ignore):
#
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#
# - Project-agnostic, universal behavior (that supports and enforces this
#   and similar projects' style guides, i.e., this developer's preferences):
#
#   - ✓ W391: blank line at end of file
#
#       - (lb): Personal preference. So that, e.g., Vim's <C-End> is predictable
#               and goes to first column of an empty last line, rather than to
#               some unknown last column of a nonempty last line.
#
#   - ✓ W503 line break before binary operator
#
#       - (lb): I'm with Knuth, for readability, because columns align.
#
#               Prefer this:
#
#                   if (some_thing
#                       and another
#                       and another_thing):
#
#               over this:
#
#                   if (some_thing and
#                       another and
#                       another_thing):
#
ignore = W391,W503

[isort]
# See: setup.cfg's [flake8] max-line-length = 89.
line_length = 89
# multi_line_output: 3 - Vertical Hanging Indent.
multi_line_output = 3
not_skip = __init__.py
known_third_party =
    factory
    faker
    fauxfactory
    freezegun
    pytest
    pytest_factoryboy

[tool:pytest]
addopt =
	--tb=short
	--strict
	--rsx

# 2020-01-19: Dropped Python2 support, so do not enable universal:
#   [bdist_wheel]
#   universal = 1
# which has effect, too, of making release named, e.g.,:
#   dist/myapp-3.0.0rc2-py2.py3-none-any.whl
# Without setting, you'll see a pure Python 3 release, e.g.,:
#   dist/myapp-3.0.0rc3-py3-none-any.whl

